html/css/vnf-qe.css
/*
This is CSS layout for Quantum Espresso pages
*/

fieldset {
    border: 0px;
    padding: 10px;
    margin: 0px;
    background-color: white;
}


#qe-section-actions {
    margin-bottom: 15px;
}


#action-refresh-status,
.qe-action-back,
.qe-action-refresh,
.qe-action-new,
.qe-action-edit,
.qe-action-clone,
.qe-action-analyze,
.qe-action-delete,
.qe-run-task {
    padding: 2px 15px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    text-decoration: none;
    margin-right: 10px;
}

a.qe-action-back,
a.qe-action-refresh,
a.qe-action-new,
a.qe-action-edit,
a.qe-action-clone,
a.qe-action-analyze,
a.qe-action-delete {
    text-decoration: none;
}

.qe-action-back {
    background-color: #dcf6db;
}

.qe-action-refresh {
    background-color: #abff8d; /* #abff8d - light green, #dcf6db */
}

.qe-action-new {
    background-color: #c2d6f9; /* #48f640 - deep green */
}

.qe-action-edit {
    background-color: #c2d6f9; /* light blue */
}

.qe-action-clone {
    background-color: #c2d6f9; /* #FFCC00 - orange */
}

.qe-action-analyze {
    background-color: #c2d6f9; /* yellow */
}

.qe-action-delete {
    background-color: #c2d6f9; /* #FF7700 - light red */
}


#action-refresh-status {
    float: left;
    background-color: #abff8d;   /* #8aff61; */
    margin: 30px 10px 10px 25px;
}


.button-green a{
    background-color: #33DD33; /* deep green */
}

.qe-run-task {
    background-color: #48f640; /* deep green #1fff1f*/
}

a.qe-run-task {
    text-decoration: none;
    font-weight: bold;
}

.qe-tasks-table td.qe-action-task {
    padding: 10px;
}

.qe-section,
.qe-section-inline {
    font-size: 1.1em;
    font-weight: bold;
    margin-top: 30px;
    margin-bottom: 10px;
}

.qe-section-inline,
.qe-section-inline a,
.qe-section-inline p {
    float: left;
}

#qe-tasks-label {
    display: inline;
}

.qe-table {

}

.qe-table table{
    border-collapse: collapse;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    width: 500px;
    background-color: #f0f0f0;
}

.qe-table td,
.qe-tasks-table td{
    border: 2px solid white;
    padding: 3px 10px 3px 10px;
    vertical-align: top;
}

.qe-tasks-table table{
    border-collapse: collapse;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    background-color: #f0f0f0;
}

.qe-tasks-table td{
    width: 240px
}

.qe-grid table,
.qe-tasks-info table {

}

.qe-grid td,
.qe-tasks-info td {
    border: 0px;
    padding: 0px  5px 0px 0px;
    vertical-align: top;
}

.qe-tasks-info td.qe-tasks-param {
    width: 70px;
}

.qe-cell-param {
    width: 170px;
    font-weight: bold;
}

.qe-cell-value {
    
}

/* Style for QE forms */

.qe-form {
    border-collapse: collapse;
}

.qe-form-label {
    width: 170px;
    font-weight: bold;
    vertical-align: top;
    text-align: right;
    padding-top: 5px;
    padding-right: 5px;
}

.qe-form-field div {
    margin: -2px;
}

.qe-task-header-change {
    text-align: right;
}

.qe-action-accept {

}

.qe-action-cancel {
    padding-top: 5px;
}


/* Change? */
#qe-check-results,
#qe-analyze-results,
.qe-task-action {
    margin-left: 10px;
    padding: 1px 10px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    text-decoration: none;
}

#qe-check-results,
.qe-task-action {
    background-color: #abff8d; /* light green #8aff61*/
}

a.qe-task-action {
    text-decoration: none;
}

#qe-analyze-results {
    margin-left: 10px;
    background-color: #c2d6f9; /* yellow */
}

.qe-run-tasks {

}

.default-size-plot {
    width: 500;
    height: 350;
}

/* CSS from Vinil */

/* overload the default behavior of luban for buttons */
#error-area,
#input-error-area {
    color: red;
}

.clear-both {
    clear: both;
}

.display-inline a,
.display-inline p{
    margin: 0px;
    float: left;
}

.display-block,
.display-block a,
.display-block p{
    display: block;
}

.text-bold {
    font-weight: bold;
}

.text-green {
    color: green;
}

.padding-left-20 {
    padding-left: 20px;
}


.action-link {
    border-color: #cced8c;
    border-width: 2px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    width:  50px;
    padding: 0px 2px;
}

